fixed columns on mobile

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -30,6 +30,7 @@ h1 {
 p,
 .ui.form .field > label {
   font-size: 1.35em;
+  color: $font-black;
 }
 .container-fluid {
   background-color: $east-side;
@@ -70,7 +71,11 @@ p,
   font-size: 4em;
   text-align: center;
 }
-
+@media screen and (max-width: 900px) {
+  .love-box {
+    max-width: 50%;
+  }
+}
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
   .container {
@@ -98,6 +103,7 @@ p,
 }
 .love-box {
   padding-top: 2em;
+  max-width: 200px;
 }
 .ui.blue.button {
   background-color: $riptide;
